--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "axios": "^1.13.2",
     "lucide-react": "^0.555.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.6.0",
-    "recharts": "^3.5.1"
+    "recharts": "^3.5.1",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
